clean up combers