@@ -6,86 +6,87 @@ import java.util.function.BiPredicate;
 
 import ai.timefold.solver.core.api.score.stream.bi.BiJoiner;
 
+import org.jspecify.annotations.NullMarked;
+import org.jspecify.annotations.Nullable;
+
 /**
  * Combs an array of {@link BiJoiner} instances into a mergedJoiner and a mergedFiltering.
  *
  * @param <A>
  * @param <B>
  */
+@NullMarked
 public final class BiJoinerComber<A, B> {
 
+    @SafeVarargs
     public static <A, B> BiJoinerComber<A, B> comb(BiJoiner<A, B>... joiners) {
-        List<DefaultBiJoiner<A, B>> defaultJoinerList = new ArrayList<>(joiners.length);
-        List<BiPredicate<A, B>> filteringList = new ArrayList<>(joiners.length);
+        var defaultJoinerList = new ArrayList<DefaultBiJoiner<A, B>>(joiners.length);
+        var filteringList = new ArrayList<BiPredicate<A, B>>(joiners.length);
 
-        int indexOfFirstFilter = -1;
+        var indexOfFirstFilter = -1;
         // Make sure all indexing joiners, if any, come before filtering joiners. This is necessary for performance.
-        for (int i = 0; i < joiners.length; i++) {
-            BiJoiner<A, B> joiner = joiners[i];
+        for (var i = 0; i < joiners.length; i++) {
+            var joiner = joiners[i];
             if (joiner instanceof FilteringBiJoiner) {
                 // From now on, only allow filtering joiners.
                 indexOfFirstFilter = i;
                 filteringList.add(((FilteringBiJoiner<A, B>) joiner).getFilter());
             } else if (joiner instanceof DefaultBiJoiner) {
                 if (indexOfFirstFilter >= 0) {
-                    throw new IllegalStateException("Indexing joiner (" + joiner + ") must not follow " +
-                            "a filtering joiner (" + joiners[indexOfFirstFilter] + ").\n" +
-                            "Maybe reorder the joiners such that filtering() joiners are later in the parameter list.");
+                    throw new IllegalStateException("""
+                            Indexing joiner (%s) must not follow a filtering joiner (%s).
+                            "Maybe reorder the joiners such that filtering() joiners are later in the parameter list."""
+                            .formatted(joiner, joiners[indexOfFirstFilter]));
                 }
                 defaultJoinerList.add((DefaultBiJoiner<A, B>) joiner);
             } else {
-                throw new IllegalArgumentException("The joiner class (" + joiner.getClass() + ") is not supported.");
+                throw new IllegalArgumentException("The joiner class (%s) is not supported."
+                        .formatted(joiner.getClass()));
             }
         }
-        DefaultBiJoiner<A, B> mergedJoiner = DefaultBiJoiner.merge(defaultJoinerList);
-        BiPredicate<A, B> mergedFiltering = mergeFiltering(filteringList);
+        var mergedJoiner = DefaultBiJoiner.merge(defaultJoinerList);
+        var mergedFiltering = mergeFiltering(filteringList);
         return new BiJoinerComber<>(mergedJoiner, mergedFiltering);
     }
 
-    private static <A, B> BiPredicate<A, B> mergeFiltering(List<BiPredicate<A, B>> filteringList) {
-        if (filteringList.isEmpty()) {
-            return null;
-        }
-        switch (filteringList.size()) {
-            case 1:
-                return filteringList.get(0);
-            case 2:
-                return filteringList.get(0).and(filteringList.get(1));
-            default:
-                // Avoid predicate.and() when more than 2 predicates for debugging and potentially performance
-                return (A a, B b) -> {
-                    for (BiPredicate<A, B> predicate : filteringList) {
+    @SuppressWarnings("unchecked")
+    private static <A, B> @Nullable BiPredicate<A, B> mergeFiltering(List<BiPredicate<A, B>> filteringList) {
+        return switch (filteringList.size()) {
+            case 0 -> null;
+            case 1 -> filteringList.getFirst();
+            default -> {
+                // Avoid predicate.and() for debugging and potential performance
+                var filteringArray = (BiPredicate<A, B>[]) filteringList.toArray(new BiPredicate[0]);
+                yield (A a, B b) -> {
+                    for (var predicate : filteringArray) {
                         if (!predicate.test(a, b)) {
                             return false;
                         }
                     }
                     return true;
                 };
-        }
+            }
+        };
     }
 
     private DefaultBiJoiner<A, B> mergedJoiner;
-    private final BiPredicate<A, B> mergedFiltering;
+    private final @Nullable BiPredicate<A, B> mergedFiltering;
 
-    public BiJoinerComber(DefaultBiJoiner<A, B> mergedJoiner, BiPredicate<A, B> mergedFiltering) {
+    public BiJoinerComber(DefaultBiJoiner<A, B> mergedJoiner, @Nullable BiPredicate<A, B> mergedFiltering) {
         this.mergedJoiner = mergedJoiner;
         this.mergedFiltering = mergedFiltering;
     }
 
     /**
-     * Returns the merged indexing joiner, reordered equal-first so the indexer chain always has its
-     * (merged) equal level at the top. Computed on read to also cover {@link #addJoiner} appends.
-     *
-     * @return never null
+     * Returns the merged indexing joiner,
+     * reordered equal-first so the indexer chain always has its (merged) equal level at the top.
+     * Computed on read to also cover {@link #addJoiner} appends.
      */
     public DefaultBiJoiner<A, B> getMergedJoiner() {
         return mergedJoiner.reorderedEqualsFirst();
     }
 
-    /**
-     * @return null if not applicable
-     */
-    public BiPredicate<A, B> getMergedFiltering() {
+    public @Nullable BiPredicate<A, B> getMergedFiltering() {
         return mergedFiltering;
     }
 
