@@ -10,12 +10,14 @@ import ai.timefold.solver.core.api.score.stream.tri.TriJoiner;
 import ai.timefold.solver.core.impl.bavet.common.joiner.AbstractJoiner;
 import ai.timefold.solver.core.impl.bavet.common.joiner.JoinerType;
 
-import org.jspecify.annotations.NonNull;
+import org.jspecify.annotations.NullMarked;
 
-public final class DefaultTriJoiner<A, B, C> extends AbstractJoiner<C> implements TriJoiner<A, B, C> {
+@NullMarked
+public final class DefaultTriJoiner<A, B, C>
+        extends AbstractJoiner<C>
+        implements TriJoiner<A, B, C> {
 
-    private static final DefaultTriJoiner NONE =
-            new DefaultTriJoiner(new BiFunction[0], new JoinerType[0], new Function[0]);
+    private static final DefaultTriJoiner NONE = new DefaultTriJoiner(new BiFunction[0], new JoinerType[0], new Function[0]);
 
     private final BiFunction<A, B, Object>[] leftMappings;
 
@@ -24,30 +26,30 @@ public final class DefaultTriJoiner<A, B, C> extends AbstractJoiner<C> implement
         this.leftMappings = new BiFunction[] { leftMapping };
     }
 
-    private DefaultTriJoiner(BiFunction<A, B, ?>[] leftMappings, JoinerType[] joinerTypes,
-            Function<C, ?>[] rightMappings) {
+    public DefaultTriJoiner(BiFunction<A, B, ?>[] leftMappings, JoinerType[] joinerTypes, Function<C, ?>[] rightMappings) {
         super(rightMappings, joinerTypes);
         this.leftMappings = (BiFunction<A, B, Object>[]) Objects.requireNonNull(leftMappings);
     }
 
     public static <A, B, C> DefaultTriJoiner<A, B, C> merge(List<DefaultTriJoiner<A, B, C>> joinerList) {
-        if (joinerList.size() == 1) {
-            return joinerList.get(0);
-        }
-        return joinerList.stream().reduce(NONE, DefaultTriJoiner::and);
+        return switch (joinerList.size()) {
+            case 0 -> NONE;
+            case 1 -> joinerList.getFirst();
+            default -> joinerList.stream().reduce(NONE, DefaultTriJoiner::and);
+        };
     }
 
     @Override
-    public @NonNull DefaultTriJoiner<A, B, C> and(@NonNull TriJoiner<A, B, C> otherJoiner) {
-        DefaultTriJoiner<A, B, C> castJoiner = (DefaultTriJoiner<A, B, C>) otherJoiner;
-        int joinerCount = getJoinerCount();
-        int castJoinerCount = castJoiner.getJoinerCount();
-        int newJoinerCount = joinerCount + castJoinerCount;
-        JoinerType[] newJoinerTypes = Arrays.copyOf(this.joinerTypes, newJoinerCount);
-        BiFunction[] newLeftMappings = Arrays.copyOf(this.leftMappings, newJoinerCount);
-        Function[] newRightMappings = Arrays.copyOf(this.rightMappings, newJoinerCount);
-        for (int i = 0; i < castJoinerCount; i++) {
-            int newJoinerIndex = i + joinerCount;
+    public DefaultTriJoiner<A, B, C> and(TriJoiner<A, B, C> otherJoiner) {
+        var castJoiner = (DefaultTriJoiner<A, B, C>) otherJoiner;
+        var joinerCount = getJoinerCount();
+        var castJoinerCount = castJoiner.getJoinerCount();
+        var newJoinerCount = joinerCount + castJoinerCount;
+        var newJoinerTypes = Arrays.copyOf(this.joinerTypes, newJoinerCount);
+        var newLeftMappings = Arrays.copyOf(this.leftMappings, newJoinerCount);
+        var newRightMappings = Arrays.copyOf(this.rightMappings, newJoinerCount);
+        for (var i = 0; i < castJoinerCount; i++) {
+            var newJoinerIndex = i + joinerCount;
             newJoinerTypes[newJoinerIndex] = castJoiner.getJoinerType(i);
             newLeftMappings[newJoinerIndex] = castJoiner.getLeftMapping(i);
             newRightMappings[newJoinerIndex] = castJoiner.getRightMapping(i);
@@ -60,22 +62,22 @@ public final class DefaultTriJoiner<A, B, C> extends AbstractJoiner<C> implement
      *         {@link JoinerType#EQUAL} joiners moved to the front (stable, see
      *         {@link AbstractJoiner#equalsFirstOrder}).
      */
-    public DefaultTriJoiner<A, B, C> reorderedEqualsFirst() {
+    DefaultTriJoiner<A, B, C> reorderedEqualsFirst() {
         var order = equalsFirstOrder(joinerTypes);
         if (order == null) {
             return this;
         }
         var count = order.length;
-        BiFunction[] newLeftMappings = new BiFunction[count];
+        var newLeftMappings = new BiFunction[count];
         var newJoinerTypes = new JoinerType[count];
-        Function[] newRightMappings = new Function[count];
+        var newRightMappings = new Function[count];
         for (var i = 0; i < count; i++) {
             var from = order[i];
             newLeftMappings[i] = leftMappings[from];
             newJoinerTypes[i] = joinerTypes[from];
             newRightMappings[i] = rightMappings[from];
         }
-        return new DefaultTriJoiner<>(newLeftMappings, newJoinerTypes, newRightMappings);
+        return new DefaultTriJoiner<A, B, C>(newLeftMappings, newJoinerTypes, newRightMappings);
     }
 
     public BiFunction<A, B, Object> getLeftMapping(int index) {
@@ -83,11 +85,11 @@ public final class DefaultTriJoiner<A, B, C> extends AbstractJoiner<C> implement
     }
 
     public boolean matches(A a, B b, C c) {
-        int joinerCount = getJoinerCount();
-        for (int i = 0; i < joinerCount; i++) {
-            JoinerType joinerType = getJoinerType(i);
-            Object leftMapping = getLeftMapping(i).apply(a, b);
-            Object rightMapping = getRightMapping(i).apply(c);
+        var joinerCount = getJoinerCount();
+        for (var i = 0; i < joinerCount; i++) {
+            var joinerType = getJoinerType(i);
+            var leftMapping = getLeftMapping(i).apply(a, b);
+            var rightMapping = getRightMapping(i).apply(c);
             if (!joinerType.matches(leftMapping, rightMapping)) {
                 return false;
             }
